--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,13 +38,22 @@ body {
   display: none;
 }
 
+.nav-icon {
+  width: 100%;
+  background-color: #ffffff;
+  overflow: auto;
+}
+
 .nav-icon a {
   float: left;
-  width: 30%;
+  width: 20%;
   text-align: center;
   transition: all 0.3s ease;
-  color: black;
   font-size: 27px;
+}
+
+.nav-icon a:hover {
+  background-color: #eeeded;
 }
 
 /* Responsive */
