--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 body {
   background-color: #f5f5f5;
-  height: 500vh;
 }
 
 #text-info a {
@@ -50,10 +49,20 @@ body {
   text-align: center;
   transition: all 0.3s ease;
   font-size: 27px;
+  color: #0d6efd;
 }
 
 .nav-icon a:hover {
-  background-color: #eeeded;
+  color: black;
+}
+
+#register {
+  height: 630px;
+  width: 378px;
+  border: 1px solid gainsboro;
+  background-color: #ffffff;
+  padding-top: 50px;
+  margin-bottom: 60px;
 }
 
 /* Responsive */
