--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,10 +56,10 @@ body {
   color: black;
 }
 
-#register {
-  height: 630px;
-  width: 378px;
-  border: 1px solid gainsboro;
+#container-form {
+  height: auto;
+  width: 370px;
+  border: 3px solid gainsboro;
   background-color: #ffffff;
   padding-top: 50px;
   margin-bottom: 60px;
