--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,13 +56,24 @@ body {
   color: black;
 }
 
+.head-brand {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  font-family: "Kanit", sans-serif;
+}
+
+.header-form {
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+
 #container-form {
-  height: auto;
-  width: 370px;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  width: 380px;
   border: 3px solid gainsboro;
   background-color: #ffffff;
-  padding-top: 50px;
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 }
 
 /* Responsive */
@@ -78,6 +89,9 @@ body {
   }
   .card-customer {
     width: 100%;
+  }
+  #container-form {
+    width: 350px;
   }
 }
 
