--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
   background-color: #f5f5f5;
 }
 
+/* Navbar */
 #text-info a {
   text-decoration: none;
   color: gray;
@@ -13,28 +14,6 @@ body {
 
 .input-search {
   width: 400px;
-}
-
-#carousel {
-  padding-top: 156px;
-  padding-bottom: 50px;
-}
-
-.carousel-item img {
-  width: 100%;
-  height: 400px;
-}
-
-.card-customer {
-  width: 17rem;
-}
-
-#info-customer {
-  margin-bottom: 50px;
-}
-
-#col-product:hover {
-  border: 2px solid #0d6efd;
 }
 
 #nav-bottom {
@@ -59,7 +38,37 @@ body {
 .nav-icon a:hover {
   color: black;
 }
+/* End Navbar */
 
+/* Carousel */
+#carousel {
+  padding-top: 156px;
+  padding-bottom: 50px;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 400px;
+}
+/* End Carousel */
+
+/* Info Promo */
+.card-customer {
+  width: 17rem;
+}
+
+#info-customer {
+  margin-bottom: 50px;
+}
+/* End Info Promo */
+
+/* Product */
+#col-product:hover {
+  border: 2px solid #0d6efd;
+}
+/* End Product */
+
+/* Login & Regitser Form */
 .head-brand {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -79,10 +88,7 @@ body {
   background-color: #ffffff;
   margin-bottom: 50px;
 }
-
-#detail-product {
-  padding-top: 156px;
-}
+/* End Login & Regitser Form */
 
 /* Responsive */
 @media screen and (max-width: 991px) {
@@ -101,8 +107,13 @@ body {
   #container-form {
     width: 350px;
   }
+  #image-product-view {
+    width: 150px;
+    height: 150px;
+  }
 }
 
+/* Medium */
 @media screen and (max-width: 600px) {
   #text-info {
     display: none;
@@ -119,6 +130,7 @@ body {
   }
 }
 
+/* Mobile Device */
 @media screen and (max-width: 484px) {
   #button-navbar {
     display: none;
@@ -132,4 +144,16 @@ body {
   #nav-bottom {
     display: contents;
   }
+  #image-product-view {
+    width: 150px;
+    height: 150px;
+  }
+  #desc-view-product {
+    padding-left: 0px;
+    padding-top: 0px;
+  }
+  .delivery-text {
+    display: none;
+  }
 }
+/* End Responsive */
