--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ body {
 /* Info Promo */
 .card-customer {
   width: 17rem;
+  height: 112px;
 }
 
 #info-customer {
@@ -66,6 +67,14 @@ body {
 #col-product:hover {
   border: 2px solid #0d6efd;
 }
+/* View Product */
+.image-product {
+  width: 100%;
+  height: 350px;
+  margin-top: 70px;
+}
+
+/* End View Product */
 /* End Product */
 
 /* Login & Regitser Form */
