--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,10 @@ body {
   border: 2px solid #0d6efd;
 }
 
+#banner-search {
+  margin-top: 156px;
+}
+
 /* View Product */
 .image-product {
   width: 100%;
@@ -251,6 +255,10 @@ input::-webkit-inner-spin-button {
 
   #dekstop-view {
     display: none;
+  }
+
+  #banner-search {
+    margin-top: 94px;
   }
 }
 
