--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,17 @@ body {
   outline: none;
 }
 
+#quantitymobile {
+  font-weight: bold;
+  -moz-appearance: textfield;
+  text-align: center;
+  font-size: 15px;
+  border: none;
+  background-color: #ffffff;
+  color: #202030;
+  outline: none;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -122,7 +133,18 @@ input::-webkit-inner-spin-button {
   border-radius: 15px 0 0 15px;
 }
 
+#decrementmobile {
+  padding: 10px 15px 15px 15px;
+  border-radius: 15px 0 0 15px;
+}
+
+
 #increment {
+  padding: 10px 15px 15px 10px;
+  border-radius: 0 15px 15px 0;
+}
+
+#incrementmobile {
   padding: 10px 15px 15px 10px;
   border-radius: 0 15px 15px 0;
 }
