add dropdown menu in dekstop view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,14 @@ body {
   color: black;
 }
 
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-item:hover {
+  color: #0D6EFD;
+}
+
 /* End Navbar */
 
 /* Carousel */
