--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,17 @@ input::-webkit-inner-spin-button {
 
 /* End Cart */
 
+/* Profile */
+.my-activity a {
+  color: black;
+}
+
+.my-activity a:hover {
+  color: #0D6EFD;
+}
+
+/* End Profile */
+
 /* Wishlist */
 #wishlist {
   padding-top: 156px;
