add order page for mobile view and validation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,6 +296,10 @@ input::-webkit-inner-spin-button {
     margin-top: -45px;
   }
 
+  .checkout {
+    margin-top: 290px;
+  }
+
   #button-navbar {
     display: none;
   }
