--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,11 @@ input::-webkit-inner-spin-button {
   display: none;
 }
 
+.modal {
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 4;
+}
+
 /* End View Product */
 /* End Product */
 
